# RAG-Anything

./: .coverage  .coveragerc  .gitignore  Dockerfile  README.md  README_zh.md  config.toml  coverage.xml  docker-compose.yml  env.example  pyproject.toml  pytest.ini  requirements.txt  setup.py  test_completion_delimiter.py  test_entity_extraction.py
docs/: API_LLM_MODULE.md  CONFIGURATION.md  LOGGING.md  config_migration.md  i18n_maintenance_guide.md  i18n_quick_reference.md  parsers_and_models.md
examples/: batch_processing_example.py  enhanced_markdown_example.py  fastapi_server_example.py  image_format_test.py  insert_content_list_example.py  langchain_llm_examples.py  lmstudio_integration_example.py  modalprocessors_example.py  raganything_example.py
locale/: messages.pot  raganything.pot
raganything/: __init__.py  base.py  batch.py  batch_parser.py  config.py  enhanced_markdown.py  i18n.py  i18n_logger.py  i18n_v2.py  logger.py  main.py  modalprocessors.py  parser.py  processor.py  prompt.py  query.py  raganything.py  server_config.py  utils.py
scripts/: README.md  benchmark_audio.py  check_deps.py  config_tools.py  create_tiktoken_cache.py  dev_tools.py  i18n_tools.py  media_tools.py  merge_config.py  process_audio.py  verify_vlm.py
tests/: conftest.py  debug_lightrag_hang.py  e2e_http_test.sh  full_pipeline_test.py  test_api_basic.py  test_api_insert_status.py  test_api_query.py  test_api_suite.py  test_audio_analysis.py  test_audio_parser.py  test_cli.py  test_config.py  test_config_coverage.py  test_config_toml.py  test_custom_sink.py  test_device.py  test_device_coverage.py  test_device_manager.py  test_embedding.py  test_embedding_suite.py  test_embedding_wrapper.py  test_factory.py  test_health_check.py  test_i18n_suite.py  test_integration_logging.py  test_interfaces.py  test_llm_langchain_builder.py  test_local_backend.py  test_logger.py  test_logger_basic.py  test_logger_custom_sink.py  test_logger_integration.py  test_logger_thread.py  test_logger_thread_safety.py  test_logging_suite.py  (+16 more)
(+63 files in other folders)
